add create product api
